# PicConfusion

./: CMakeLists.txt  README.md
include/: base.hpp  codec.hpp  options.hpp
src/: base.cpp  codec.cpp  main.cpp  options.cpp
